# ml-zoomcamp-2025-midterm-project

./: Dockerfile  README.md  midterm.ipynb  notebook.ipynb  predict.py  pyproject.toml  requirements.txt  service.py  test.py  train.py
.ipynb_checkpoints/: midterm-checkpoint.ipynb  notebook-checkpoint.ipynb
